--- a/codepen-START.html
+++ b/codepen-START.html
@@ -5,21 +5,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Recreating Codepen!</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <script src="https://use.fontawesome.com/f45c822d69.js"></script>
+
   <link rel="stylesheet" href="style-START.css">
 </head>
 
 <body>
   <div class="codepen">
-    <header class="pen">
-      <div class="pen__details">
-        <h1>Some Amazing Pen Name</h1>
-        <p class="pen__author">A Pen for Byteout Frontenders</p>
+    <header class="pen d-flex justify-content-between">
+      <div class="pen__details d-flex justify-content-between align-items-center">
+        <img src="./codepen-icon-26.jpg" alt="codepan__logo" class="codepan-logo">
+        <div class="about__project">
+          <h1 class="project__name">Some Amazing Pen Name<i class="fa fa-pencil"></i></h1>
+          <p class="pen__author">A Pen for Byteout Frontenders</p>
+        </div>
       </div>
-      <button class="button button--dirty">☁️ Save</button>
-      <button class="button">️️☁️ Save As Private</button>
-      <button class="button">⚙ Settings</button>
-      <button class="button">👀 Change View</button>
-      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/28831/profile/profile-80.jpg?1" alt="My picture" height="44">
+      <div class="save-details">
+        <button class="button button--dirty"><i class="fa fa-cloud"></i>Save</button>
+        <button class="button button--dirty"><i class="fa fa-cloud"></i>Save As Private</button>
+        <button class="button button--dirty"><i class="fa fa-cog"></i>Settings</button>
+        <button class="button button--dirty"><i class="fa fa-eye"></i>Change View</button>
+        <img class="avatar" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/28831/profile/profile-80.jpg?1" alt="My picture"
+             height="44">
+      </div>
     </header>
     <section class="code">
       <div class="editor">
